Table DbUser {
  UserId id [pk, unique]
  CreatedAt datetime
  UpdatedAt datetime [null]
  AuthenticatedAt datetime [null, note: "Last authentication time so we can track how long the user was not reauthenticated"]
  DiscordId ulong [note: "Raw discord id, not their user and #tag"]
  CtuUsername string
  DuplicityUserId id [null, note: ""]
  DuplicityApproved boolean [note: "Whether the duplicity was approved, so the auth flow can be finished"]
}

enum TargetType {
  User
  Role
  Everyone
}

Table PermissionAssignment {
  PermissionAssignmentId id [pk, unique]
  PermissionName string [note: "Name of the permission"]
  DiscordTargetId string [null, note: "Discord target id"]
  DiscordTargetType TargetType
  
  Note: 'Permissions for commands or other features. Should follow parent.child.subchild pattern etc. * can be used as a placeholder in particular level, etc parent.* gives all permissions beginning with parent to the given target'
}

enum RoleType {
  General
  Year
  Programme
  FinishedStudies
  CurrentStudies
  Faculty
}

Table RoleAssignment {
  RoleAssignmentId id [pk, unique]
  RoleId ulong
  RoleType RoleType
}

Table YearRoleAssignment {
  YearRoleAssignmentId id [pk, unique]
  Year int
  AssignmentId string [ref: > RoleAssignment.RoleAssignmentId]
  
  Note: "What year roles should be assigned as year the student started studying"
}

Table ProgrammeRoleAssignment {
  ProgrammeRoleAssignmentId id [pk, unique]
  Programme string
  AssignmentId string [ref: > RoleAssignment.RoleAssignmentId]
  
  Note: "Programme roles to be assigned based on programme"
}

Table TitleRoleAssignment {
  TitleRoleAssignmentId id [pk, unique]
  Title string
  Post boolean
  Pre boolean
  Priority uint
  
  AssignmentId string [ref: > RoleAssignment.RoleAssignmentId]
  
  Note: "What roles to assign based off of what titles the user has"
}

Table UsermapRoleAssignment {
  UsermapRoleAssignmentId id [pk, unique]
  UsermapRole string
  RegexMatch boolean [note: "If true, search using regex, if false, match whole string"]
  
  AssignmentId string [ref: > RoleAssignment.RoleAssignmentId]
  
  Note: "Mapping of usermap roles to discord roles"
}